src/page-modules/assistant/trip/trip.module.css
.tripPatternWrapper {
  max-width: 100%;
  width: 100%;
  overflow: hidden;
}

.tripResults {
  display: flex;
  flex-direction: column;
  gap: token('spacing.xLarge');
}

.nonTransitResult {
  display: flex;
  flex-wrap: wrap;
  gap: token('spacing.medium');
}

.dayLabel {
  padding-bottom: token('spacing.medium');
}

.fetchButton {
  align-self: center;
  margin-top: token('spacing.xLarge');
}

.disabledFetchTextContainer {
  align-self: center;
  margin-top: token('spacing.xLarge');
}

